tests/snapshots/integration_tests__detectors@array_use_after_pop_front.cairo.snap
---
source: tests/integration_tests.rs
expression: results
input_file: tests/detectors/array_use_after_pop_front.cairo
---
[
    Result {
        impact: Low,
        name: "array-use-after-pop-front",
        confidence: Medium,
        message: "The array [2] is used after removing elements from it in the function array_use_after_pop_front::array_use_after_pop_front::ArrayUseAfterPopFront::bad_loop[expr10]",
    },
    Result {
        impact: Low,
        name: "array-use-after-pop-front",
        confidence: Medium,
        message: "The array [3] is used after removing elements from it in the function array_use_after_pop_front::array_use_after_pop_front::ArrayUseAfterPopFront::bad_return",
    },
    Result {
        impact: Low,
        name: "array-use-after-pop-front",
        confidence: Medium,
        message: "The array [6] is used after removing elements from it in the function array_use_after_pop_front::array_use_after_pop_front::ArrayUseAfterPopFront::bad",
    },
    Result {
        impact: Low,
        name: "array-use-after-pop-front",
        confidence: Medium,
        message: "The array [6] is used after removing elements from it in the function array_use_after_pop_front::array_use_after_pop_front::ArrayUseAfterPopFront::bad_external_call",
    },
    Result {
        impact: Low,
        name: "array-use-after-pop-front",
        confidence: Medium,
        message: "The array [6] is used after removing elements from it in the function array_use_after_pop_front::array_use_after_pop_front::ArrayUseAfterPopFront::bad_library_call",
    },
    Result {
        impact: Low,
        name: "array-use-after-pop-front",
        confidence: Medium,
        message: "The array [6] is used after removing elements from it in the function array_use_after_pop_front::array_use_after_pop_front::ArrayUseAfterPopFront::bad_one_branch",
    },
    Result {
        impact: Low,
        name: "array-use-after-pop-front",
        confidence: Medium,
        message: "The arrays [6, 31] are used after removing elements from them in the function array_use_after_pop_front::array_use_after_pop_front::ArrayUseAfterPopFront::bad_multiple_arrays",
    },
]
