tests/snapshots/integration_tests__detectors@dead_code.cairo.snap
---
source: tests/integration_tests.rs
expression: "get_detectors().iter().flat_map(|d| d.run(&core)).collect::<Vec<Result>>()"
---
[
    Result {
        name: "dead-code",
        impact: Low,
        confidence: Medium,
        message: "Function add_2 defined in dead_code::dead_code::DeadCode is never used",
    },
]
