tests/snapshots/integration_tests__detectors@felt252_overflow.cairo.snap
---
source: tests/integration_tests.rs
expression: results
input_file: tests/detectors/felt252_overflow.cairo
---
[
    Result {
        impact: Medium,
        name: "felt252-unsafe-arithmetic",
        confidence: Medium,
        message: "The function felt252_overflow::felt252_overflow::Felt252Overflow::bad_add uses the felt252 operation felt252_add([0], [1]) -> ([6]) with the user-controlled parameters: [0],[1], which is not overflow/underflow safe",
    },
    Result {
        impact: Medium,
        name: "felt252-unsafe-arithmetic",
        confidence: Medium,
        message: "The function felt252_overflow::felt252_overflow::Felt252Overflow::bad_add_controlled uses the felt252 operation felt252_add([11], [2]) -> ([17]) with the user-controlled parameters: [2], which is not overflow/underflow safe",
    },
    Result {
        impact: Medium,
        name: "felt252-unsafe-arithmetic",
        confidence: Medium,
        message: "The function felt252_overflow::felt252_overflow::Felt252Overflow::bad_add_controlled uses the felt252 operation felt252_add([17], [3]) -> ([18]) with the user-controlled parameters: [17],[3], which is not overflow/underflow safe",
    },
    Result {
        impact: Medium,
        name: "felt252-unsafe-arithmetic",
        confidence: Medium,
        message: "The function felt252_overflow::felt252_overflow::Felt252Overflow::bad_add_uncontrolled uses the felt252 operation felt252_sub([0], [1]) -> ([2]), which is not overflow/underflow safe",
    },
    Result {
        impact: Medium,
        name: "felt252-unsafe-arithmetic",
        confidence: Medium,
        message: "The function felt252_overflow::felt252_overflow::Felt252Overflow::bad_mul_controlled uses the felt252 operation felt252_mul([5], [4]) -> ([9]) with the user-controlled parameters: [5],[4], which is not overflow/underflow safe",
    },
    Result {
        impact: Medium,
        name: "felt252-unsafe-arithmetic",
        confidence: Medium,
        message: "The function felt252_overflow::felt252_overflow::Felt252Overflow::bad_mul_controlled uses the felt252 operation felt252_mul([6], [3]) -> ([5]) with the user-controlled parameters: [6],[3], which is not overflow/underflow safe",
    },
    Result {
        impact: Medium,
        name: "felt252-unsafe-arithmetic",
        confidence: Medium,
        message: "The function felt252_overflow::felt252_overflow::Felt252Overflow::bad_mul_controlled uses the felt252 operation felt252_mul([8], [2]) -> ([7]) with the user-controlled parameters: [8],[2], which is not overflow/underflow safe",
    },
    Result {
        impact: Medium,
        name: "felt252-unsafe-arithmetic",
        confidence: Medium,
        message: "The function felt252_overflow::felt252_overflow::Felt252Overflow::bad_sub_controlled uses the felt252 operation felt252_sub([10], [2]) -> ([11]) with the user-controlled parameters: [2], which is not overflow/underflow safe",
    },
    Result {
        impact: Medium,
        name: "felt252-unsafe-arithmetic",
        confidence: Medium,
        message: "The function felt252_overflow::felt252_overflow::Felt252Overflow::bad_sub_uncontrolled uses the felt252 operation felt252_sub([2], [3]) -> ([4]), which is not overflow/underflow safe",
    },
    Result {
        impact: Medium,
        name: "felt252-unsafe-arithmetic",
        confidence: Medium,
        message: "The function felt252_overflow::felt252_overflow::Felt252Overflow::test_sub_assert uses the felt252 operation felt252_sub([0], [11]) -> ([12]) with the user-controlled parameters: [0], which is not overflow/underflow safe",
    },
    Result {
        impact: Medium,
        name: "unused-return",
        confidence: Medium,
        message: "Return value unused for the function call function_call<user@felt252_overflow::felt252_overflow::Felt252Overflow::bad_add>([13], [14]) -> ([12]) in felt252_overflow::felt252_overflow::Felt252Overflow::bad_add_controlled",
    },
]
