tests/snapshots/integration_tests__detectors@reentrancy_benign.cairo.snap
---
source: tests/integration_tests.rs
expression: results
input_file: tests/detectors/reentrancy_benign.cairo
---
[
    Result {
        impact: Low,
        name: "reentrancy-benign",
        confidence: Medium,
        message: "Reentrancy in reentrancy_benign::reentrancy_benign::TestContract::bad1\n\tExternal call function_call<user@reentrancy_benign::reentrancy_benign::IAnotherContractDispatcherImpl::foo>([9], [10], [11], [12]) -> ([6], [7], [8]) done in reentrancy_benign::reentrancy_benign::TestContract::bad1\n\tVariable written after function_call<user@reentrancy_benign::reentrancy_benign::TestContract::a::InternalContractMemberStateImpl::write>([21], [22], [23], [24]) -> ([18], [19], [20]) in reentrancy_benign::reentrancy_benign::TestContract::bad1.",
    },
    Result {
        impact: Low,
        name: "reentrancy-benign",
        confidence: Medium,
        message: "Reentrancy in reentrancy_benign::reentrancy_benign::TestContract::bad2\n\tExternal call function_call<user@reentrancy_benign::reentrancy_benign::IAnotherContractDispatcherImpl::foo>([13], [14], [15], [16]) -> ([10], [11], [12]) done in reentrancy_benign::reentrancy_benign::TestContract::bad2\n\tVariable written after function_call<user@reentrancy_benign::reentrancy_benign::TestContract::a::InternalContractMemberStateImpl::write>([42], [43], [44], [45]) -> ([39], [40], [41]) in reentrancy_benign::reentrancy_benign::TestContract::bad2.",
    },
    Result {
        impact: Low,
        name: "reentrancy-benign",
        confidence: Medium,
        message: "Reentrancy in reentrancy_benign::reentrancy_benign::TestContract::bad2\n\tExternal call function_call<user@reentrancy_benign::reentrancy_benign::IAnotherContractDispatcherImpl::foo>([13], [14], [15], [16]) -> ([10], [11], [12]) done in reentrancy_benign::reentrancy_benign::TestContract::bad2\n\tVariable written after function_call<user@reentrancy_benign::reentrancy_benign::TestContract::b::InternalContractMemberStateImpl::write>([52], [53], [54], [55]) -> ([49], [50], [51]) in reentrancy_benign::reentrancy_benign::TestContract::bad2.",
    },
    Result {
        impact: Low,
        name: "reentrancy-benign",
        confidence: Medium,
        message: "Reentrancy in reentrancy_benign::reentrancy_benign::TestContract::bad2\n\tExternal call function_call<user@reentrancy_benign::reentrancy_benign::IAnotherContractDispatcherImpl::foo>([30], [31], [32], [33]) -> ([27], [28], [29]) done in reentrancy_benign::reentrancy_benign::TestContract::bad2\n\tVariable written after function_call<user@reentrancy_benign::reentrancy_benign::TestContract::a::InternalContractMemberStateImpl::write>([42], [43], [44], [45]) -> ([39], [40], [41]) in reentrancy_benign::reentrancy_benign::TestContract::bad2.",
    },
    Result {
        impact: Low,
        name: "reentrancy-benign",
        confidence: Medium,
        message: "Reentrancy in reentrancy_benign::reentrancy_benign::TestContract::bad2\n\tExternal call function_call<user@reentrancy_benign::reentrancy_benign::IAnotherContractDispatcherImpl::foo>([30], [31], [32], [33]) -> ([27], [28], [29]) done in reentrancy_benign::reentrancy_benign::TestContract::bad2\n\tVariable written after function_call<user@reentrancy_benign::reentrancy_benign::TestContract::b::InternalContractMemberStateImpl::write>([52], [53], [54], [55]) -> ([49], [50], [51]) in reentrancy_benign::reentrancy_benign::TestContract::bad2.",
    },
    Result {
        impact: Low,
        name: "reentrancy-benign",
        confidence: Medium,
        message: "Reentrancy in reentrancy_benign::reentrancy_benign::TestContract::bad3\n\tExternal call function_call<user@reentrancy_benign::reentrancy_benign::IAnotherContractDispatcherImpl::foo>([8], [9], [10], [11]) -> ([5], [6], [7]) done in reentrancy_benign::reentrancy_benign::TestContract::internal_ext_call\n\tVariable written after function_call<user@reentrancy_benign::reentrancy_benign::TestContract::a::InternalContractMemberStateImpl::write>([18], [19], [20], [21]) -> ([15], [16], [17]) in reentrancy_benign::reentrancy_benign::TestContract::bad3.",
    },
    Result {
        impact: Low,
        name: "reentrancy-benign",
        confidence: Medium,
        message: "Reentrancy in reentrancy_benign::reentrancy_benign::TestContract::bad4\n\tExternal call function_call<user@reentrancy_benign::reentrancy_benign::IAnotherContractDispatcherImpl::foo>([8], [9], [10], [11]) -> ([5], [6], [7]) done in reentrancy_benign::reentrancy_benign::TestContract::internal_ext_call2\n\tVariable written after function_call<user@reentrancy_benign::reentrancy_benign::TestContract::a::InternalContractMemberStateImpl::write>([18], [19], [20], [21]) -> ([15], [16], [17]) in reentrancy_benign::reentrancy_benign::TestContract::bad4.",
    },
]
