tests/snapshots/integration_tests__detectors@unused_arguments.cairo.snap
---
source: tests/integration_tests.rs
expression: results
input_file: tests/detectors/unused_arguments.cairo
---
[
    Result {
        name: "unused-arguments",
        impact: Low,
        confidence: High,
        message: "The 1st argument in unused_arguments::unused_arguments::UnusedArguments::unused_2 is never used",
    },
    Result {
        name: "unused-arguments",
        impact: Low,
        confidence: High,
        message: "The 2nd argument in unused_arguments::unused_arguments::UnusedArguments::unused_1 is never used",
    },
    Result {
        name: "unused-arguments",
        impact: Low,
        confidence: High,
        message: "The 2nd argument in unused_arguments::unused_arguments::UnusedArguments::unused_2 is never used",
    },
]
