tests/snapshots/integration_tests__detectors@unused_events.cairo.snap
---
source: tests/integration_tests.rs
expression: results
input_file: tests/detectors/unused_events.cairo
---
[
    Result {
        name: "unused-events",
        impact: Medium,
        confidence: Medium,
        message: "Event MyUnusedEvent defined in unused_events::unused_events::UnusedEvents is never emitted",
    },
]
