tests/snapshots/integration_tests__detectors@unused_return.cairo.snap
---
source: tests/integration_tests.rs
expression: results
input_file: tests/detectors/unused_return.cairo
---
[
    Result {
        impact: Medium,
        name: "felt252-unsafe-arithmetic",
        confidence: Medium,
        message: "The function unused_return::unused_return::UnusedReturn::f_5 uses the felt252 operation felt252_mul([9], [10]) -> ([11]), which is not overflow/underflow safe",
    },
    Result {
        impact: Medium,
        name: "unused-return",
        confidence: Medium,
        message: "Return value unused for the function call function_call<user@unused_return::unused_return::UnusedReturn::f_1>([6], [7], [8]) -> ([3], [4], [5]) in unused_return::unused_return::UnusedReturn::unused_return_1",
    },
    Result {
        impact: Medium,
        name: "unused-return",
        confidence: Medium,
        message: "Return value unused for the function call function_call<user@unused_return::unused_return::UnusedReturn::f_2>([2]) -> ([1]) in unused_return::unused_return::UnusedReturn::unused_return_2",
    },
    Result {
        impact: Medium,
        name: "unused-return",
        confidence: Medium,
        message: "Return value unused for the function call function_call<user@unused_return::unused_return::UnusedReturn::f_3>([2]) -> ([1]) in unused_return::unused_return::UnusedReturn::unused_return_3",
    },
    Result {
        impact: Medium,
        name: "unused-return",
        confidence: Medium,
        message: "Return value unused for the function call function_call<user@unused_return::unused_return::UnusedReturn::f_4>([2]) -> ([1]) in unused_return::unused_return::UnusedReturn::unused_return_4",
    },
    Result {
        impact: Medium,
        name: "unused-return",
        confidence: Medium,
        message: "Return value unused for the function call function_call<user@unused_return::unused_return::UnusedReturn::f_5>([5], [6]) -> ([2], [3], [4]) in unused_return::unused_return::UnusedReturn::unused_return_5",
    },
]
